fixed z-index of details page bug

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,6 +49,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	max-width: 500px;
+	z-index: 1;
 }
 
 .rightContainer {
@@ -276,7 +277,7 @@ main {
 	width:100%;
 	height: 100%;
 	transform: translate(0px, var(--scrollPos));
-	z-index: 4;
+	z-index: 10;
 }
 .details-wrap-show {
 	visibility: visible;
@@ -295,9 +296,10 @@ main {
 	max-height: 70vh;
 	padding: 10px;
 	/* border: 7px solid pink; */
-	z-index: 5;
+	z-index: 11;
 	background-color: white;
 	/* border-radius: 15px; */
+	filter: drop-shadow(0 0 10px black);
 	
 	
 }
@@ -310,13 +312,13 @@ main {
 }
 
 @-webkit-keyframes details-hide {
-	0% { transform: translate(-0%, 0px); filter: opacity(1) } 
-	100% { transform: translate(-0%, 20px); filter: opacity(0)  }
+	0% { transform: translate(-0%, 0px); filter: opacity(1) drop-shadow(0 0 10px rgba(0, 0, 0, 0.582)); } 
+	100% { transform: translate(-0%, 20px); filter: opacity(0) drop-shadow(0 0 10px rgba(0, 0, 0, 0));  }
   }
   
   @keyframes details-hide { 
-	0% { transform: translate(-0%, 0px); filter: opacity(1) } 
-	100% { transform: translate(-0%, 20px); filter: opacity(0)  }
+	0% { transform: translate(-0%, 0px); filter: opacity(1) drop-shadow(0 0 10px rgba(0, 0, 0, 0.582)); } 
+	100% { transform: translate(-0%, 20px); filter: opacity(0) drop-shadow(0 0 10px rgba(0, 0, 0, 0));  }
   }
 
 .details-show{
@@ -326,13 +328,13 @@ main {
 }
 
 @-webkit-keyframes details-show {
-	0% { transform: translate(-0%, 20px); filter: opacity(0) } 
-	100% { transform: translate(-0%, 0px); filter: opacity(1)  }
+	0% { transform: translate(-0%, 20px); filter: opacity(0) drop-shadow(0 0 10px rgba(0, 0, 0, 0));  } 
+	100% { transform: translate(-0%, 0px); filter: opacity(1) drop-shadow(0 0 10px rgba(0, 0, 0, 0.582));  }
   }
   
   @keyframes details-show { 
-	0% { transform: translate(-0%, 20px); filter: opacity(0) } 
-	100% { transform: translate(-0%, 0px); filter: opacity(1)  }
+	0% { transform: translate(-0%, 20px); filter: opacity(0) drop-shadow(0 0 10px rgba(0, 0, 0, 0)); } 
+	100% { transform: translate(-0%, 0px); filter: opacity(1) drop-shadow(0 0 10px rgba(0, 0, 0, 0.582));  }
   }
 
   .hidden {
